--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,6 @@
 	datalad-url = https://github.com/OpenNeuroDatasets/ds001734.git
 [submodule "data/neurovault"]
 	path = data/neurovault
-	url = ./data/neurovault
+	url = git@gin.g-node.org:/RemiGau/neurovault_narps_open_pipeline.git
+	datalad-url = git@gin.g-node.org:/RemiGau/neurovault_narps_open_pipeline.git
 	datalad-id = b7b70790-7b0c-40d3-976f-c7dd49df3b86
