--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-tmp
+
+# to avoid commiting data
+data/derived
 
 # neuro user in docker image
 neuro
@@ -97,6 +99,7 @@ ipython_config.py
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
 #Pipfile.lock
+Pipfile
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
