--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,18 +1,24 @@
+# Name the workflow
 name: pylint
 
+# Define when it runs (on pushes when python files changed)
 on:
   push:
     paths:
       - '**.py'
 
+# Jobs that define the workflow
 jobs:
-  build:
+  # Name of the job running pylint
+  static-analysis:
 
+    # Define the OS and the python versions to use
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10']
 
+    # Steps that define the job
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
