--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -63,8 +63,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        pip install .
+        pip install .[tests]
 
     - name: Collect tests with pytest
-      run: pytest --collect-only -q ${{ needs.identify-tests.outputs.tests }}
+      run: pytest --collect-only -q -m "pipeline_tests" ${{ needs.identify-tests.outputs.tests }}
