--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        pip install .
+        pip install .[tests]
 
     - name: Collect tests with pytest
       run: pytest --collect-only -q ${{ steps.identify.outputs.tests }}
