--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -3,12 +3,11 @@
 # Name the workflow
 name: unit_testing
 
-# Define when it runs (on PR when narps_open files change)
+# Define when it runs (on pushes when narps_open files change)
 on:
-  pull_request:
+  push:
     paths:
       - 'narps_open/**'
-      - '!narps_open/pipelines/**'
 
 # Jobs that define the workflow
 jobs:
@@ -31,9 +30,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        pip install .
+        pip install .[tests]
 
-    - name: Collect tests with pytest
+    - name: Launch tests with pytest & get code coverage
       run: |
-        pytest --collect-only -q --ignore=tests/pipelines/ tests/
+        coverage run -m pytest --junit-xml=pytest_report.xml -m "not pipeline_test"
+        coverage report
+        coverage xml
+
+    - name: Archive pytest results
+      uses: actions/upload-artifact@v3
+      with:
+        name: unit_tests-reports
+        path: |
+          pytest_report.xml
+          coverage.xml
+        retention-days: 15
