--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -31,9 +31,9 @@ jobs:
     - uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
+        key: ${{ runner.os }}-pip-pylint
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ runner.os }}-pip-pylint
 
     - name: Install dependencies
       run: |
