--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -5,7 +5,6 @@ name: pipeline_tests
 
 # Define when it runs (on PR when code for a pipeline changes)
 on:
-  workflow_dispatch:
   pull_request:
     paths:
       - 'narps_open/pipelines/**'
@@ -46,6 +45,7 @@ jobs:
           fi
         done
         # Send the test list as job output
+        echo $test_files
         echo "tests=$test_files" >> $GITHUB_OUTPUT
 
   # A job to run the identified tests
