--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -7,7 +7,7 @@ name: pipeline_tests
 on:
   pull_request:
     paths:
-      - 'narps_open/pipelines/**'
+      - 'narps_open/pipelines/team**'
 
 # Jobs that define the workflow
 jobs:
