[ENH][TEST] configuration for the results module

--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -4,5 +4,6 @@ config_type = "testing"
 
 [directories]
 dataset = ""
-results = ""
+reproduced_results = ""
+narps_results = "data/narps_results"
 test_data = "tests/test_data/"
