[ENH] modify extraction paths while results download [TEST] update test

--- a/narps_open/utils/configuration/default_config.toml
+++ b/narps_open/utils/configuration/default_config.toml
@@ -3,6 +3,6 @@ title = "Default configuration for the NARPS open pipelines project"
 config_type = "default"
 
 [directories]
-dataset = ""
-reproduced_results = ""
-narps_results = ""
+dataset = "data/original/ds001734/"
+reproduced_results = "data/reproduced/"
+narps_results = "data/results/"
