--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -3,7 +3,7 @@ title = "Testing configuration for the NARPS open pipelines project"
 config_type = "testing"
 
 [directories]
-dataset = ""
-reproduced_results = ""
-narps_results = "data/narps_results"
+dataset = "tests/data/original/ds001734/"
+reproduced_results = "tests/data/reproduced/"
+narps_results = "tests/data/results/"
 test_data = "tests/test_data/"
