--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -3,9 +3,9 @@ title = "Testing configuration for the NARPS open pipelines project"
 config_type = "testing"
 
 [directories]
-dataset = "tests/data/original/ds001734/"
-reproduced_results = "tests/data/reproduced/"
-narps_results = "tests/data/results/"
+dataset = "run/data/original/ds001734/"
+reproduced_results = "run/data/reproduced/"
+narps_results = "run/data/results/"
 test_data = "tests/test_data/"
 test_runs = "run/"
 
