--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Analyse the code with pylint
       run: |
         pylint --exit-zero narps_open > pylint_report_narps_open.txt
-        pylint --exit-zero tests > pylint_report_narps_open.txt
+        pylint --exit-zero tests > pylint_report_tests.txt
 
     - name: Archive pylint results
       uses: actions/upload-artifact@v3
