--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -3,7 +3,7 @@ title = "Testing configuration for the NARPS open pipelines project"
 config_type = "testing"
 
 [directories]
-dataset = "run/data/original/ds001734/"
+dataset = "run/data/ds001734/"
 reproduced_results = "run/data/reproduced/"
 narps_results = "run/data/results/"
 test_data = "tests/test_data/"
@@ -11,3 +11,4 @@ test_runs = "run/"
 
 [runner]
 nb_procs = 8 # Maximum number of threads executed by the runner
+nb_trials = 3 # Maximum number of executions to have the pipeline executed completely
