--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -15,3 +15,8 @@ nb_trials = 3 # Maximum number of executions to have the pipeline executed compl
 
 [results]
 neurovault_naming = true # true if results files are saved using the neurovault naming, false if they use naming of narps
+
+[testing]
+
+[testing.pipelines]
+correlation_thresholds = [0.30, 0.70, 0.80, 0.85, 0.93] # Correlation between reproduced hypotheses files and results, respectively for [20, 40, 60, 80, 108] subjects.
