Updating pipeline status workflow

--- a/.github/workflows/pipeline_status.yml
+++ b/.github/workflows/pipeline_status.yml
@@ -55,4 +55,5 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Add changes" && git push
+        git commit -m "Pipeline status updated"
+        git push
