--- a/.github/workflows/pipeline_status.yml
+++ b/.github/workflows/pipeline_status.yml
@@ -5,8 +5,13 @@ name: pipeline_status
 
 # Define when it runs
 on:
+  push:
+    paths:
+      - 'narps_open/pipelines/team**'
+    branches:
+      - main
   issues:
-    types: [opened, edited, reopened]
+    types: [opened, edited, deleted, closed, reopened]
 
 # Jobs that define the workflow
 jobs:
@@ -47,8 +52,8 @@ jobs:
       run: |
         python narps_open/utils/status.py --md > wiki/pipeline_status.md
         cd wiki
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config user.name github-actions
+        git config user.email github-actions@github.com
         git add .
         git commit -m "Pipeline status updated"
         git push
