--- a/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
+++ b/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
@@ -35,14 +35,15 @@ body:
     attributes:
       label: Additional context
       description: Any supplementary information you find relevant about the pipeline, that would help reproducing it.
-      placeholder: ex. 
+      placeholder: ex. This pipeline uses a run level analysis.
     validations:
       required: true
 
   - type: markdown
     attributes:
       value: |
-        Please tick the boxes below once you finish the corresponding task. :+1:
+        Please tick the boxes below once the corresponding task is finished. :+1:
+        - [ ] :ok_hand: A maintainer of the project approved the issue, by assigning a :checkered_flag:`status: ready for dev` label to it.
         - [ ] :deciduous_tree: Create a branch on your fork to start the reproduction.
         - [ ] :sunrise: Create a file `team_{team_id}.py` inside the [`narps_open/pipelines/`](/narps_open/pipelines) directory. You can use the [`narps_open/pipelines/`](narps_open/pipelines/pipeline_template.py) file as a template if needed.
         - [ ] :brain: Write the code for the pipeline, using Nipype and the file architecture described in [docs/pipelines.md](/docs/pipelines.md).
