--- a/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
+++ b/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
@@ -39,8 +39,11 @@ body:
     validations:
       required: true
 
-  - type: markdown
+  - type: textarea
+    id: tasks
     attributes:
+      label: List of tasks
+      description: Please keep the following tasks, as they are common to all pipeline reproduction. Feel free to add other tasks.
       value: |
         Please tick the boxes below once the corresponding task is finished. :+1:
         - [ ] :ok_hand: A maintainer of the project approved the issue, by assigning a :checkered_flag:`status: ready for dev` label to it.
@@ -52,3 +55,5 @@ body:
         - [ ] :microscope: Create tests for your pipeline. You can use [`tests/pipelines/test_team_2T6S.py`](/tests/pipelines/test_team_2T6S.py) as an example.
         - [ ] :microscope: Make sure your code passes all the tests you created (see [docs/testing.md](/docs/testing.md)).
         - [ ] :inbox_tray: create a [pull request](/CONTRIBUTING.md#pull_requests) from your code.
+    validations:
+      required: true
