[TEST] Mocking the tests for narps_open.utils.status

--- a/.github/workflows/pipeline_status.yml
+++ b/.github/workflows/pipeline_status.yml
@@ -8,6 +8,7 @@ on:
   push:
     paths:
       - 'narps_open/pipelines/team**'
+      - 'narps_open/utils/status.py'
     branches:
       - main
   issues:
