--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -36,7 +36,7 @@ jobs:
       id: identify
       run: |
         # Loop through modified files
-        for file in $(git diff --name-only remotes/origin/main...$GITHUB_SHA)
+        for file in $(git diff --name-only --diff-filter=d remotes/origin/main...$GITHUB_SHA)
         do
           # echo each file
           echo $file
