[CI] some actions run on self-hosted runner

--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -58,7 +58,7 @@ jobs:
   # A job to run the identified tests
   pytest:
     needs: identify-tests
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
