--- a/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
+++ b/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Thank you for starting this pipeline reproduction! :tada:
-        Please make sure there is no concurrent issue about it : have a look [here](/docs/pipeline_status.md).
+        Please make sure there is no concurrent issue about it : have a look [here](https://github.com/Inria-Empenn/narps_open_pipelines/wiki/pipeline_status).
         Once it's ok, start by changing the `team_id` in the title of this issue, then fill the form.
 
         :warning: Please do not reference any other team IDs in the following, unless the issue is actually related these IDs.
@@ -50,7 +50,7 @@ body:
         Please tick the boxes below once the corresponding task is finished. :+1:
         - [ ] :ok_hand: A maintainer of the project approved the issue, by assigning a :checkered_flag:`status: ready for dev` label to it.
         - [ ] :deciduous_tree: Create a branch on your fork to start the reproduction.
-        - [ ] :sunrise: Create a file `team_{team_id}.py` inside the [`narps_open/pipelines/`](/narps_open/pipelines) directory. You can use a file inside [`narps_open/pipelines/templates`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines/templates) file as a template if needed.
+        - [ ] :sunrise: Create a file `team_{team_id}.py` inside the [`narps_open/pipelines/`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines) directory. You can use a file inside [`narps_open/pipelines/templates`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines/templates) file as a template if needed.
         - [ ] :brain: Write the code for the pipeline, using Nipype and the file architecture described in [docs/pipelines.md](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/docs/pipelines.md).
         - [ ] :blue_book: Make sure your code is documented enough.
         - [ ] :snake: Make sure your code is explicit and conforms with PEP8.
