--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -15,12 +15,12 @@ on:
 # Jobs that define the workflow
 jobs:
 
-  # A job to list the tests to be run
-  identify-tests:
-    runs-on: ubuntu-latest
-    outputs:
-      tests: ${{ steps.identify.outputs.tests }}
+  # A job to identify and run the tests
+  pytest:
+
+    runs-on: self-hosted
     steps:
+
     - name: Checkout main branch for comparison
       uses: actions/checkout@v3
       with:
@@ -55,26 +55,6 @@ jobs:
         echo "tests=$test_files" >> $GITHUB_OUTPUT
         echo "teams=$teams" >> $GITHUB_OUTPUT
 
-  # A job to run the identified tests
-  pytest:
-    needs: identify-tests
-    runs-on: self-hosted
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v3
-      with:
-        python-version: 3.9
-
-    - uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -83,8 +63,8 @@ jobs:
     - name: Remove test reports if any existing
       run: rm -f test_pipeline-*.txt
 
-    - name: Collect tests with pytest
-      run: pytest --collect-only -q -m "pipeline_test" ${{ needs.identify-tests.outputs.tests }}
+    - name: Execute tests with pytest
+      run: pytest -q -m "pipeline_test" ${{ steps.identify.outputs.tests }}
 
     - name: Report results on GitHub
       run: |
@@ -98,7 +78,7 @@ jobs:
         echo "| -------- | ------- | ------- | ------- |" >> $GITHUB_STEP_SUMMARY
 
         # Loop through test report files
-        for team in ${{ needs.identify-tests.outputs.teams }}
+        for team in ${{ steps.identify.outputs.teams }}
         do
           cat test_pipeline-$team.txt >> $GITHUB_STEP_SUMMARY
         done
