--- a/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
+++ b/.github/ISSUE_TEMPLATE/pipeline_reproduction.yml
@@ -50,12 +50,12 @@ body:
         Please tick the boxes below once the corresponding task is finished. :+1:
         - [ ] :ok_hand: A maintainer of the project approved the issue, by assigning a :checkered_flag:`status: ready for dev` label to it.
         - [ ] :deciduous_tree: Create a branch on your fork to start the reproduction.
-        - [ ] :sunrise: Create a file `team_{team_id}.py` inside the [`narps_open/pipelines/`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines) directory. You can use a file inside [`narps_open/pipelines/templates`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines/templates) file as a template if needed.
+        - [ ] :sunrise: Create a file `team_{team_id}.py` inside the [`narps_open/pipelines/`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines) directory. You can use a file inside [`narps_open/pipelines/templates`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/narps_open/pipelines/templates) as a template if needed.
+        - [ ] :inbox_tray: Create a [pull request](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/CONTRIBUTING.md#pull_requests) as soon as you completed the previous task.
         - [ ] :brain: Write the code for the pipeline, using Nipype and the file architecture described in [docs/pipelines.md](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/docs/pipelines.md).
         - [ ] :blue_book: Make sure your code is documented enough.
         - [ ] :snake: Make sure your code is explicit and conforms with PEP8.
         - [ ] :microscope: Create tests for your pipeline. You can use files in [`tests/pipelines/test_team_*`](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/tests/pipelines/) as examples.
         - [ ] :microscope: Make sure your code passes all the tests you created (see [docs/testing.md](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/docs/testing.md)).
-        - [ ] :inbox_tray: create a [pull request](https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/CONTRIBUTING.md#pull_requests) from your code.
     validations:
       required: true
