[CI] self-hosted runner config

--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -46,7 +46,7 @@ jobs:
         echo "tests=$test_files" >> $GITHUB_OUTPUT
 
     - name: Load configuration for self-hosted runner
-      run: echo "${{ vars.SELF_HOSTED_TEST_CONFIG }}" > narps_open/utils/configuration/testing_config.toml
+      run: cp local_testing_config.toml narps_open/utils/configuration/testing_config.toml
 
     - name: Install dependencies
       run: |
