--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -56,7 +56,7 @@ jobs:
         echo "teams=$teams" >> $GITHUB_OUTPUT
 
     - name: Load configuration for self-hosted runner
-      run: cp local_testing_config.toml narps_open/utils/configuration/testing_config.toml
+      run: cp /home/neuro/local_testing_config.toml narps_open/utils/configuration/testing_config.toml
 
     - name: Install dependencies
       run: |
