--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Create a list of tests for changed tests
       id: identify
