--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -16,11 +16,14 @@ jobs:
   pytest:
     runs-on: self-hosted
     steps:
+    - name: Checkout main branch for diff
+      uses: actions/checkout@v3
+      with:
+        ref: main
+        fetch-depth: 0
 
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Create a list of tests for changed tests
       id: identify
