[CI] pipeline_tests and change_tests only run on PR events

--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -16,12 +16,6 @@ jobs:
   pytest:
     runs-on: self-hosted
     steps:
-    - name: Checkout main branch for diff
-      uses: actions/checkout@v3
-      with:
-        ref: main
-        fetch-depth: 0
-
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -30,7 +24,7 @@ jobs:
       run: |
         # Loop through modified files
         # Loop through modified files between PR base and last head
-        for file in $(git diff --name-only --diff-filter=d ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
+        for file in $(git diff --name-only --diff-filter=d ${{ github.event.before }} ${{ github.sha }})
         do
           # List files corresponding to tests/**/test_**.py
           if [[ "$file" =~ .*"tests".*"test_".*".py" ]]; then
