--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -16,12 +16,6 @@ jobs:
   pytest:
     runs-on: self-hosted
     steps:
-    - name: Checkout main branch for diff
-      uses: actions/checkout@v3
-      with:
-        ref: main
-        fetch-depth: 0
-
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -29,7 +23,7 @@ jobs:
       id: identify
       run: |
         # Loop through modified files between PR base and last head
-        for file in $(git diff --name-only --diff-filter=d ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
+        for file in $(git diff --name-only --diff-filter=d ${{ github.event.before }} ${{ github.sha }})
         do
           # echo each file
           echo $file
