--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -16,6 +16,12 @@ jobs:
   pytest:
     runs-on: self-hosted
     steps:
+    - name: Checkout main branch for diff
+      uses: actions/checkout@v3
+      with:
+        ref: main
+        fetch-depth: 0
+
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -24,7 +30,7 @@ jobs:
       run: |
         # Loop through modified files
         # Loop through modified files between PR base and last head
-        for file in $(git diff --name-only --diff-filter=d ${{ github.event.before }} ${{ github.sha }})
+        for file in $(git diff --name-only --diff-filter=d ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
         do
           # List files corresponding to tests/**/test_**.py
           if [[ "$file" =~ .*"tests".*"test_".*".py" ]]; then
@@ -44,4 +50,7 @@ jobs:
         pip install .[tests]
 
     - name: Collect tests with pytest
-      run: pytest -q ${{ steps.identify.outputs.tests }}
+      run: |
+      if [[ ${{ steps.identify.outputs.tests }} != "" ]]
+        pytest -q ${{ steps.identify.outputs.tests }}
+      fi
