--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -28,6 +28,10 @@ jobs:
     - name: Create a list of tests for changed pipelines
       id: identify
       run: |
+        # Fetch enough history for a common merge-base commit
+        git fetch origin ${{ github.event.pull_request.head.ref }} --depth $(( ${{ github.event.pull_request.commits }} + 1 ))
+        git fetch origin ${{ github.event.pull_request.base.ref }}
+
         # Loop through modified files between PR base and last head
         for file in $(git diff --name-only --diff-filter=d ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
         do
@@ -61,7 +65,7 @@ jobs:
 
     - name: Execute tests with pytest
       run: |
-        if [[ ${{ steps.identify.outputs.tests }} != "" ]]; then
+        if [[ "${{ steps.identify.outputs.tests }}" != "" ]]; then
           pytest -q -m "pipeline_test" ${{ steps.identify.outputs.tests }}
         fi
 
