--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -16,14 +16,10 @@ jobs:
   pytest:
     runs-on: self-hosted
     steps:
-    - name: Checkout main branch for diff
+    - name: Checkout PR branch
       uses: actions/checkout@v3
       with:
-        ref: main
-        fetch-depth: 0
-
-    - name: Checkout repository
-      uses: actions/checkout@v3
+        ref: ${{ github.event.pull_request.head.ref }}
 
     - name: Create a list of tests for changed pipelines
       id: identify
