--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -27,7 +27,7 @@ jobs:
       id: identify
       run: |
         # Loop through modified files between PR base and last head
-        for file in $(git diff --name-only --diff-filter=d $(git diff --name-only remotes/origin/main...$GITHUB_SHA)
+        for file in $(git diff --name-only --diff-filter=d remotes/origin/main...$GITHUB_SHA)
         do
           # List files corresponding to tests/**/test_**.py
           if [[ "$file" =~ .*"tests".*"test_".*".py" ]]; then
