--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -44,8 +44,8 @@ jobs:
 
     - name: Analyse the code with pylint
       run: |
-        pylint --fail-under=8 --ignore-paths narps_open/pipelines/ narps_open > pylint_report_narps_open.txt
-        pylint --fail-under=8 tests > pylint_report_tests.txt
+        pylint --fail-under 8 --ignore-paths narps_open/pipelines/ narps_open > pylint_report_narps_open.txt
+        pylint --fail-under 8 tests > pylint_report_tests.txt
 
     - name: Archive pylint results
       uses: actions/upload-artifact@v3
