[CI] record pylint logs in case of failure only

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -51,6 +51,7 @@ jobs:
 
     - name: Archive pylint results
       uses: actions/upload-artifact@v3
+      if: failure() # Only if previous step failed
       with:
         name: pylint-reports-python
         path: |
