[ENH] results module using Neurovault API

--- a/narps_open/utils/configuration/default_config.toml
+++ b/narps_open/utils/configuration/default_config.toml
@@ -5,7 +5,7 @@ config_type = "default"
 [directories]
 dataset = "/home/bclenet/data/ds001734/"
 reproduced_results = "/home/bclenet/output/"
-narps_results = "data/results/"
+narps_results = "/home/bclenet/data/narps_nv_collections/"
 
 [runner]
 nb_procs = 8 # Maximum number of threads executed by the runner
