--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -38,10 +38,11 @@ jobs:
         echo $test_files
         echo "tests=$test_files" >> $GITHUB_OUTPUT
 
-  # A job to list the tests to be run
+  # A job to run the tests
   pytest:
     needs: identify-tests
     runs-on: self-hosted
+    timeout-minutes: 1440 #24h
     steps:
     - name: Checkout PR branch
       uses: actions/checkout@v3
