--- a/narps_open/utils/configuration/default_config.toml
+++ b/narps_open/utils/configuration/default_config.toml
@@ -3,9 +3,9 @@ title = "Default configuration for the NARPS open pipelines project"
 config_type = "default"
 
 [directories]
-dataset = "/home/bclenet/data/ds001734/"
-reproduced_results = "/home/bclenet/output/"
-narps_results = "/home/bclenet/data/narps_nv_collections/"
+dataset = "data/original/ds001734/"
+reproduced_results = "data/reproduced/"
+narps_results = "data/results/"
 
 [runner]
 nb_procs = 8 # Maximum number of threads executed by the runner
