--- a/narps_open/utils/configuration/default_config.toml
+++ b/narps_open/utils/configuration/default_config.toml
@@ -3,8 +3,8 @@ title = "Default configuration for the NARPS open pipelines project"
 config_type = "default"
 
 [directories]
-dataset = "/home/bclenet/data/ds001734/"
-reproduced_results = "/home/bclenet/output/"
+dataset = "data/original/ds001734/"
+reproduced_results = "data/reproduced/"
 narps_results = "data/results/"
 
 [runner]
