--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -27,24 +27,15 @@ jobs:
   pytest:
 
     # Define the runner for this job
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps that define the job
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v3
-      with:
-        python-version: 3.9
-
-    - uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+    - name: Load configuration for self-hosted runner
+      run: cp /home/neuro/local_testing_config.toml narps_open/utils/configuration/testing_config.toml
 
     - name: Install dependencies
       run: |
