[ENH] modifying actions workflows

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -1,5 +1,5 @@
----
-name: Codespell
+## Disclaimer - This GitHub Actions workflow performs a check for spelling errors inside code comments and documentation
+name: codespell
 
 on:
   push:
