--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -12,7 +12,6 @@ on:
 # Jobs that define the workflow
 jobs:
 
-
   # A job to list the tests to be run
   identify-tests:
     runs-on: ubuntu-latest
@@ -73,7 +72,17 @@ jobs:
           pytest -s -q -m "pipeline_test" ${{ needs.identify-tests.outputs.tests }}
         fi
 
+    - name: Archive pipeline execution failures
+      if: ${{ failure() }} # Run only if previous job fails
+      uses: actions/upload-artifact@v3
+      with:
+        name: pipeline_tests-reports
+        path: |
+          crash-*.pklz
+        retention-days: 15
+
     - name: Report results on GitHub
+      if: ${{ always() }}
       run: |
         # Start report
         echo "# Correlation values" >> $GITHUB_STEP_SUMMARY
