[CI] 48h workflow timeouts for pipeline tests

--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -42,6 +42,7 @@ jobs:
   pytest:
     needs: identify-tests
     runs-on: self-hosted
+    timeout-minutes: 2880 # 48h
     steps:
     - name: Checkout PR branch
       uses: actions/checkout@v3
