--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -99,3 +99,36 @@ jobs:
         do
           cat test_pipeline-$team.txt >> $GITHUB_STEP_SUMMARY
         done
+
+    - name: Checkout wiki
+      uses: actions/checkout@v3
+      if: ${{ github.ref }} == 'refs/heads/master'
+      with:
+        repository: ${{github.repository}}.wiki
+        path: wiki
+
+    - name: Report results on the project's wiki
+      if: ${{ github.ref }} == 'refs/heads/master'
+      run: |
+        # Loop through test report files & write them to the corresponding wiki page
+        for team in ${{ needs.identify-tests.outputs.teams }}
+        do
+          echo "# Correlation values" > wiki/pipeline_$team.md
+          echo "Unthresholded maps, reproduced vs. results" >> wiki/pipeline_$team.md
+          echo "Correlation values are sorted from hypotheses 1 to 9" >> wiki/pipeline_$team.md
+          echo "These values were calculated by GitHub Actions run [# $GITHUB_RUN_ID]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> wiki/pipeline_$team.md
+          echo "| Team    | Number of subjects | Test status | Correlation values |" >> wiki/pipeline_$team.md
+          echo "| -------- | ------- | ------- | ------- |" >> wiki/pipeline_$team.md
+        done
+
+        # Push changes
+        cd wiki
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+
+        # Test if there are changes in the repository before commiting
+        if [[ $(git diff --name-only) ]]; then
+          git add .
+          git commit -m "Pipeline status updated"
+          git push
+        fi
