--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -103,13 +103,13 @@ jobs:
 
     - name: Checkout wiki
       uses: actions/checkout@v3
-      if: ${{ steps.summary.conclusion == 'success' }} # Run only if previous job succeed
+      needs: summary
       with:
         repository: ${{github.repository}}.wiki
         path: wiki
 
     - name: Report results on the project's wiki
-      if: ${{ steps.summary.conclusion == 'success' }}
+      needs: summary
       run: |
         # Loop through test report files & write them to the corresponding wiki page
         for team in ${{ needs.identify-tests.outputs.teams }}
