--- a/.github/workflows/pipeline_tests.yml
+++ b/.github/workflows/pipeline_tests.yml
@@ -73,6 +73,15 @@ jobs:
           pytest -s -q -m "pipeline_test" ${{ needs.identify-tests.outputs.tests }}
         fi
 
+    - name: Export test results
+      if: ${{ always() }}
+      run: |
+        for team in ${{ needs.identify-tests.outputs.teams }}
+        do
+          report_value=$(<test_pipeline-$team.txt)
+          echo "report_team-$team=$report_value" >> $GITHUB_ENV
+        done
+
     - name: Archive pipeline execution failures
       if: ${{ failure() }} # Run only if previous job fails
       uses: actions/upload-artifact@v3
@@ -82,8 +91,13 @@ jobs:
           crash-*.pklz
         retention-days: 15
 
+  # A job to report the test results
+  tests-report:
+    needs: [identify-tests, pytest]
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    steps:
     - name: Report results on step summary
-      if: ${{ always() }}
       run: |
         # Start report
         echo "# Correlation values" >> $GITHUB_STEP_SUMMARY
@@ -97,18 +111,17 @@ jobs:
         # Loop through test report files
         for team in ${{ needs.identify-tests.outputs.teams }}
         do
-          cat test_pipeline-$team.txt >> $GITHUB_STEP_SUMMARY
+          # Retrieve the report from GITHUB_ENV, as set up by the pytest job
+          echo $(report_team-$team) >> $GITHUB_STEP_SUMMARY
         done
 
     - name: Checkout wiki
-      if: ${{ always() }}
       uses: actions/checkout@v3
       with:
         repository: ${{github.repository}}.wiki
         path: wiki
 
     - name: Report results on the project's wiki
-      if: ${{ always() }}
       run: |
         # Loop through test report files & write them to the corresponding wiki page
         for team in ${{ needs.identify-tests.outputs.teams }}
@@ -119,7 +132,9 @@ jobs:
           echo "These values were calculated by GitHub Actions run [# $GITHUB_RUN_ID]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> wiki/pipeline_$team.md
           echo "| Team    | Number of subjects | Test status | Correlation values |" >> wiki/pipeline_$team.md
           echo "| -------- | ------- | ------- | ------- |" >> wiki/pipeline_$team.md
-          cat test_pipeline-$team.txt >> wiki/pipeline_$team.md
+
+          # Retrieve the report from GITHUB_ENV, as set up by the pytest job
+          echo $(report_team-$team) >> wiki/pipeline_$team.md
         done
 
         # Push changes
