--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8.0
+  - python=3.11.0
   - pip
   - traits 
   - jupyter 
   - nilearn 
   - graphviz 
-  - nipype 
+  - nipype==1.8.6 
   - scikit-image
   - pip:
     - matplotlib
