--- a/.github/workflows/pipeline_status.yml
+++ b/.github/workflows/pipeline_status.yml
@@ -56,7 +56,7 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
 
-        # Test if there are changes in the repository before commiting
+        # Test if there are changes in the repository before committing
         if [[ $(git diff --name-only) ]]; then
           git add .
           git commit -m "Pipeline status updated"
